--- a/assets/scss/pages/_result.scss
+++ b/assets/scss/pages/_result.scss
@@ -75,6 +75,8 @@
             b {
                 font-weight: 500;
                 color:#666;
+                flex:0;
+                min-width: vw(90);
             }
         }
         .description_wrap {
