--- a/assets/scss/pages/_result.scss
+++ b/assets/scss/pages/_result.scss
@@ -537,6 +537,7 @@
                 }
                 li {                                        
                     align-items: center;
+                    border-bottom:1px solid #999;
                     > div {
                         padding:0 30px;
                         height: 69px;
