--- a/assets/scss/layout/_layout.scss
+++ b/assets/scss/layout/_layout.scss
@@ -635,6 +635,9 @@ main {
             }
             &._prev_end {
                 background: url(../img/ico_skip_prev.svg) no-repeat 0 0 / cover;
+                &::before {
+                    display: none;
+                }
             }
         }
         &:nth-child(n + 3):nth-child(-n + 9) {
@@ -645,7 +648,11 @@ main {
                 height: vw(14);
                 background-color: #ececed;
             }
-            
+        }
+        &:last-child {
+            &::before {
+                display: none !important;
+            }
         }
     }
 }
